# C.Basic

./: .gitignore  CMakeLists.txt  CREDIT.md  ISSUE_TEMPLATE.md  README.md  README_zh.md  addin.ld  prizm.ld
doc-cg/: ChangeCG_EN.txt  ChangeCG_J.txt  Command_List_CG.txt  Compile_code.txt  ErrorCode_List.txt  Extended_opcode_list.txt  Extended_opcode_list_forBIDE.txt  File_List_EN.txt  File_List_J.txt  JIS_to_GB_Tbl.txt  ManualCG_EN.txt  ManualCG_FR.txt  ManualCG_J.txt  ManualFX_J.txt  Mat_List.txt  Mat_Vct_List.txt  Message.txt  NormalG_F72B.txt  OptimizingCBasic.txt  ReadmeCG_EN.txt  ReadmeCG_FR.txt  ReadmeCG_J.txt  Setup_format.txt  ThanksList.txt  array.txt  arrayV.txt
doc-fx/: Change_EN.txt  Change_J.txt  Command_List.txt  ErrorCode_List.txt  Extended_opcode_list.txt  Manual_EN.txt  Manual_FR.txt  Manual_J.txt  README_EN.txt  README_FR.txt  README_J.txt  Setup_format.txt
examples/FKeyMenu/: DIALOGUE.g1m  Dialogue.g3m  FKEYMENU.g1m  FKeyMenu.g3m
examples/List/: LIST.txt
examples/ML/: BMP.txt  MLELIPS1.g1m  MLPOLY1.g1m  MLRECT1.g1m  ML_Poly.g3m  ML_Poly5.g3m  ML_Rect.g3m  PIXEL.txt  POLY.txt
examples/bmp-cg/: BMP16A.g3m  BMPTRSP.g3m  WBMP.g3m  WBMPV.g3m
examples/bmp-fx/: BMPDRAW.g1m  BMPROTE.g1m  DRAWMAT.g1m
examples/graphXY/: GRAPHXY1.txt  GRAPHXY2.txt  LISSAJ.g1m  LISSAJ.g3m  LISSAJ.txt
examples/opcodes/: OPCODEX.g3m  OPCODEX.txt
examples/recursive/: FIBO.txt  FIBOSB.txt
examples/serial/: SERIAL.txt  SR38CLOS.g1m  SR38GKEY.g1m  SR38OPEN.g1m  SR38RLST.g1m  SR38SLST.g1m  SRGKEY.g1m  SRRXA.g1m  SRRXLIST.g1m  SRRXMAT.g1m  SRRXSTR.g1m  SRTXA.g1m  SRTXLIST.g1m  SRTXMAT.g1m  SRTXSTR.g1m
examples/system/: SYS.g1m  SYS.g3m  readme.txt
examples/try_except/: TRYERR.txt  TRYTEST.txt
fx/: AddinInfo.txt  CB.h  CBASIC.g1w  CBC_Eval.c  CBC_ListEval.c  CBI_Eval.c  CBI_Eval.h  CBI_ListEval.c  CBI_interpreter.c  CBI_interpreter.h  CBZ_Help.c  CBZ_TextConv.c  CBZ_bmp.c  CBZ_edit.c  CBZ_editmini.c  CBZ_error.c  CBZ_file.c  CBZ_fileMCS.c  CBZ_inp.c  CBZ_inpcmd.c  CBZ_inpcmdF1.c  CBZ_inpcmdF2.c  CBZ_inpcmdF3.c  CBZ_inpcmdF4.c  CBZ_inpcmdF5.c  CBZ_inpcmdF6.c  CBZ_main.c  CBZ_serial.c  CBZ_setup.c  CB_Eval.c  CB_Eval.h  CB_Eval_ext.c  CB_Help.h  CB_InterpreterGoto.c  CB_Kana.c  CB_Kana.h  CB_ListEval.c  CB_Matrix.c  CB_Matrix.h  CB_MonochromeLib.c  (+45 more)
header/: (KEYB_SC)  APP_syscalls.h  BFILE_syscalls.h  CONVERT_syscalls.h  HEAP_syscalls.h  LineEditors.h  ListView.hpp  MCS_syscalls.h  MemView2.hpp  MemViewClass.hpp  RTC_syscalls.h  STD_syscalls.h  STD_tools.h  SYSTEM_syscalls.h  Serial_syscalls.h  convert_tools.h  disp_tools.hpp  display_syscalls.h  display_tools.h  keyboard_syscalls.h  keyboard_tools.h  misc_tools.h  stdlib.h  string.h
include/: STATUS_ICONS.hpp
include/cbasic/: CB.h  CBI_Eval.h  CB_Eval.h  CB_Kana.h  CB_error.h  config.h.in
include/fxcg/: display.h  file.h
include/shc/: _h_c_lib.h  builtin.h  new_ecpp.h  new_edg.h  setjmp.h
src/: CB.h  CBASICCG_UNSELECTED.CGI  CBCG145.INI  CBC_Eval.c  CBC_ListEval.c  CBI_Eval.c  CBI_Eval.h  CBI_ListEval.c  CBI_interpreter.c  CBP.h  CBPC_Eval.c  CBPC_Eval.cpp  CBPC_ListEval.c  CBPC_ListEval.cpp  CBPI_Eval.c  CBPI_Eval.cpp  CBPI_Eval.h  CBPI_ListEval.c  CBPI_ListEval.cpp  CBPI_interpreter.c  CBPI_interpreter.cpp  CBPI_interpreter.h  CBP_Color.c  CBP_Color.cpp  CBP_Eval.c  CBP_Eval.cpp  CBP_Eval.h  CBP_Eval_ext.c  CBP_Eval_ext.cpp  CBP_GraphFunc.c  CBP_GraphFunc.cpp  CBP_Help.c  CBP_Help.cpp  CBP_Help.h  CBP_Kana.c  CBP_Kana.cpp  CBP_Kana.h  CBP_KeyScan.c  CBP_KeyScan.cpp  CBP_KeyScan.h  (+149 more)
src-cg/: .gitignore  CBASICCG_SELECTED.CGI  CBCG145.cpp  CBCG147.INI  CBPC_Eval.cpp  CBPI_ListEval.cpp  CBPI_interpreter.cpp  CBP_Eval.cpp  CBP_GraphFunc.cpp  CBP_Help.cpp  CBP_KeyScan.cpp  CBP_ListEval.cpp  CBP_Matrix.cpp  CBP_Matrix.h  CBP_MonochromeLib.cpp  CBP_MonochromeLib.h  CBP_Str.cpp  CBP_Str.h  CBP_StrExt.cpp  CBP_Time.cpp  CBP_bmp.cpp  CBP_bmp.h  CBP_edit.h  CBP_error.cpp  CBP_error.h  CBP_file.cpp  CBP_fileMCS.cpp  CBP_glib.h  CBP_glib2.cpp  CBP_glib2.h  CBP_icon.cpp  CBP_inp.cpp  CBP_inpcmdF3.cpp  CBP_inpcmdF4.cpp  CBP_inpcmdF6.cpp  CBP_interpreter.h  CBP_main.cpp  CBP_serial.cpp  CBP_sys.cpp  CG_syscall.h  (+11 more)
src-cg/BaseOptions/: BaseOptions.ini  BaseOptions_2.BAK  BaseOptions_5.BAK  BaseOptions_7.BAK
src-cg/LIB/: MyOutPut.TXT  fxCG_SYSCALLS.LIB  fxCG_SYSCALLS.lbk  fxCG_TOOLS.LIB  fxCG_TOOLS.lbk  fxCG_library.lbk  fxCG_library.lib  fxCG_library.lst
src-cg/header/: (KEYB_SC)  APP_syscalls.h  BASE.hpp  BFILE_syscalls.h  CONVERT_syscalls.h  EditStr.hpp  LineEditors.h  ListView.hpp  MCS_syscalls.h  MemView2.hpp  MemViewClass.hpp  STD_syscalls.h  STD_tools.h  SYSTEM_syscalls.h  Serial_syscalls.h  convert_tools.h  disp_tools.hpp  display_syscalls.h  display_tools.h  fxCG_Display.h  keyboard_syscalls.h  keyboard_tools.h  misc_tools.h  stdlib.h
src-cg/projects/: ASMSH_OPTIONS.PRJ  CBCG147.INI  CBCG147.PRJ  MAKEG3A.PSC  OPTLNK_OPTIONS.PRJ  TEMP.prj  (+4 more)
src-fx/: CB.h  CBASIC.g1w  CBC_Eval.c  CBC_ListEval.c  CBI_Eval.c  CBI_Eval.h  CBI_ListEval.c  CBI_interpreter.c  CBZ_Help.c  CBZ_TextConv.c  CBZ_Time.c  CBZ_bmp.c  CBZ_edit.c  CBZ_error.c  CBZ_file.c  CBZ_fileMCS.c  CBZ_file_.c  CBZ_inp.c  CBZ_inpcmd.c  CBZ_main.c  CBZ_serial.c  CBZ_setup.c  CB_Eval.c  CB_Eval.h  CB_Kana.c  CB_Kana.h  CB_ListEval.c  CB_Matrix.c  CB_Matrix.h  CB_MonochromeLib.c  CB_Str.c  CB_StrExt.c  CB_bmp.h  CB_error.h  CB_font.c  CB_font.h  CB_fontmini.h  CB_glib.h  CB_glib2.c  CB_glib2.h  (+14 more)
src-fx/include/cbasic/: CB_Kana.h  CB_Str.h  CB_Time.h  CB_complex.h  CB_file.h  CB_fontmini.h  CB_inp.h  CB_interpreter.h  CB_io.h  KeyScan.h  config.h.in  fx_syscall.h  rtc.h
src-fx/include/cbasic/shc/: ctype.h  fxlib.h  mathf.h  stdio.h  stdlib.h  string.h
src-fx/src/: CBC_Eval.c  CBC_ListEval.c  CBI_Eval.c  CBI_ListEval.c  CBZ_edit.c  CBZ_file.c  CBZ_inp.c  CBZ_inpcmdF3.c  CBZ_inpcmdF4.c  CBZ_main.c  CBZ_serial.c  CBZ_setup.c  CB_Eval.c  CB_Eval_ext.c  CB_GraphFunc.c  CB_ListEval.c  CB_Matrix.c  CB_MonochromeLib.c  CB_Str.c  CB_StrExt.c  CB_glib.c  CB_glib2.c  CB_interpreter.c  CB_interpreterVRAM.c  CB_io.c  CB_io_fkeyicon.c  KeyScan.c  MonochromeLib.c  fx_syscall.s
(+294 files in other folders)
